--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   min-height: 90vh;
   overflow: hidden;
   font-size: 16px;
+  background: linear-gradient(to right, #0c374d, #1d5f76);
 }
 
 .footer {
