--- a/src/component/Screens/HomeScreen.css
+++ b/src/component/Screens/HomeScreen.css
@@ -19,4 +19,9 @@
   text-align: center;
   display: flex;
   justify-content: center;
+
+  /*   height: 100%;
+  right: 12em;
+  position: relative;
+  top: 12em; */
 }
