--- a/src/component/Shared/ButtonStyles.css
+++ b/src/component/Shared/ButtonStyles.css
@@ -1,5 +1,5 @@
 .cssbuttons-io-button {
-  background: #a370f0;
+  background: #19384f;
   color: white;
   font-family: inherit;
   padding: 0.35em;
@@ -11,7 +11,7 @@
   letter-spacing: 0.05em;
   display: flex;
   align-items: center;
-  box-shadow: inset 0 0 1.6em -0.6em #714da6;
+  box-shadow: inset 0 0 1.6em -0.6em #2b426f;
   overflow: hidden;
   position: relative;
   height: 2.8em;
@@ -29,7 +29,7 @@
   height: 2.2em;
   width: 2.2em;
   border-radius: 0.7em;
-  box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
+  box-shadow: 0.1em 0.1em 0.6em 0.2em #19384f;
   right: 0.3em;
   transition: all 0.3s;
 }
@@ -41,7 +41,7 @@
 .cssbuttons-io-button .icon svg {
   width: 1.1em;
   transition: transform 0.3s;
-  color: #7b52b9;
+  color: #19384f;
 }
 
 .cssbuttons-io-button:hover .icon svg {
@@ -55,18 +55,18 @@
 .click-effect {
   border: none;
   outline: none;
-  background-color: #6c5ce7;
+  background-color: #19384f;
   padding: 10px 20px;
   font-size: 12px;
   font-weight: 700;
   color: #fff;
   border-radius: 5px;
   transition: all ease 0.1s;
-  box-shadow: 0px 5px 0px 0px #a29bfe;
+  box-shadow: 0px 5px 0px 0px #19384f;
   cursor: pointer;
 }
 
 .click-effect:active {
   transform: translateY(5px);
-  box-shadow: 0px 0px 0px 0px #a29bfe;
+  box-shadow: 0px 0px 0px 0px #19384f;
 }
